; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/pcie2/extr_bhnd_pcie2.c_bhnd_pcie2_get_resource_list.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/pcie2/extr_bhnd_pcie2.c_bhnd_pcie2_get_resource_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource_list = type { i32 }
%struct.bhnd_pcie2_devinfo = type { %struct.resource_list }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.resource_list* (i64, i64)* @bhnd_pcie2_get_resource_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.resource_list* @bhnd_pcie2_get_resource_list(i64 %0, i64 %1) #0 {
  %3 = alloca %struct.resource_list*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.bhnd_pcie2_devinfo*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = call i64 @device_get_parent(i64 %7)
  %9 = load i64, i64* %4, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store %struct.resource_list* null, %struct.resource_list** %3, align 8
  br label %17

12:                                               ; preds = %2
  %13 = load i64, i64* %5, align 8
  %14 = call %struct.bhnd_pcie2_devinfo* @device_get_ivars(i64 %13)
  store %struct.bhnd_pcie2_devinfo* %14, %struct.bhnd_pcie2_devinfo** %6, align 8
  %15 = load %struct.bhnd_pcie2_devinfo*, %struct.bhnd_pcie2_devinfo** %6, align 8
  %16 = getelementptr inbounds %struct.bhnd_pcie2_devinfo, %struct.bhnd_pcie2_devinfo* %15, i32 0, i32 0
  store %struct.resource_list* %16, %struct.resource_list** %3, align 8
  br label %17

17:                                               ; preds = %12, %11
  %18 = load %struct.resource_list*, %struct.resource_list** %3, align 8
  ret %struct.resource_list* %18
}

declare dso_local i64 @device_get_parent(i64) #1

declare dso_local %struct.bhnd_pcie2_devinfo* @device_get_ivars(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
